# MCP-graphql-Claude

./: .env  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
graphql_client/: client.py
mcp_server/: server.py
mcp_server/tools/: graphql_tools.py
sales/: data.json
