[project]
name = "mcp-server-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "flask>=3.1.2",
    "flask-graphql>=2.0.1",
    "graphene>=2.1.9",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]
